--- a/lab3/two2/lab3T2/lab3T2/lab3T2.vcxproj
+++ b/lab3/two2/lab3T2/lab3T2/lab3T2.vcxproj
@@ -156,6 +156,9 @@
   <ItemGroup>
     <ClCompile Include="lab3T2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lab3T2.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
